<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop ="30dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/returnsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returns"
            android:textSize="@dimen/subtitleTextSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/successfulReturnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/successful"
            style="@style/points_buttons_style"
            app:layout_constraintTop_toBottomOf="@id/returnsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/unSuccessfulReturnButton"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/unSuccessfulReturnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/points_buttons_style"
            android:text="@string/unsuccessful"
            app:layout_constraintTop_toBottomOf="@id/returnsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/successfulReturnButton"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/servicesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/serves"
            android:textSize="@dimen/subtitleTextSize"
            app:layout_constraintTop_toBottomOf="@id/unSuccessfulReturnButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/firstServeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_serve"
            style="@style/points_buttons_style"
            app:layout_constraintTop_toBottomOf="@id/servicesText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/secondServeButton"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/secondServeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/second_serve"
            style="@style/points_buttons_style"
            app:layout_constraintTop_toBottomOf="@id/servicesText"
            app:layout_constraintLeft_toRightOf="@+id/firstServeButton"
            app:layout_constraintRight_toLeftOf="@+id/doubleFaultButton"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doubleFaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/double_fault"
            style="@style/points_buttons_style"
            app:layout_constraintTop_toBottomOf="@id/servicesText"
            app:layout_constraintLeft_toRightOf="@+id/secondServeButton"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/errors"
            android:textSize="@dimen/subtitleTextSize"
            app:layout_constraintTop_toBottomOf="@id/secondServeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/unforcedErrorButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unforced"
            style="@style/points_buttons_style"
            app:layout_constraintTop_toBottomOf="@+id/errorText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/forcedErrorButton"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forcedErrorButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/points_buttons_style"
            android:text="@string/forced"
            app:layout_constraintTop_toBottomOf="@+id/errorText"
            app:layout_constraintLeft_toRightOf="@+id/unforcedErrorButton"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/opponentErrorButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/points_buttons_style"
            android:text="@string/opponent_error"
            app:layout_constraintTop_toBottomOf="@+id/forcedErrorButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/volleyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/points_buttons_style"
            android:text="@string/volley"
            app:layout_constraintTop_toBottomOf="@+id/opponentErrorButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/winner_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/points_buttons_style"
            android:text="@string/winner"
            app:layout_constraintTop_toBottomOf="@+id/volleyButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/mediumSpace"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winner_button"
            android:layout_marginTop="40dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>